kubectl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-k8s-deployment
  labels:
    app: spring-boot-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-k8s
  template:
    metadata:
      labels:
        app: spring-boot-k8s
    spec:
      containers:
      - name: spring-boot-k8s
        image: zawthanoo/spring-fat-jar-circleci-k8s:0.1.0-9e40b34-15
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /spring-k8s
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /spring-k8s
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        volumeMounts:
        - name: spring-boot-k8s-config-volume
          readOnly: true
          mountPath: /usr/local/myapp/config/spring-boot-k8s-config.yml
          subPath: spring-boot-k8s-config.yml
        - name: spring-boot-k8s-secret-volume
          readOnly: true
          mountPath: /usr/local/myapp/config/spring-boot-k8s-secret.yml
          subPath: spring-boot-k8s-secret.yml
      imagePullSecrets:
      - name: muturegistrykey
      volumes:
        - name: spring-boot-k8s-config-volume
          configMap:
            name: spring-boot-k8s-config
            items:
            - key: spring-boot-k8s-config.yml
              path: spring-boot-k8s-config.yml
        - name: spring-boot-k8s-secret-volume
          secret:
            secretName: spring-boot-k8s-secret
