kubectl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  spring-boot-k8s-service
  labels:
    name:  spring-boot-k8s-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-boot-k8s
